--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -24,7 +24,8 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_vertical"
             android:text="@string/hello_world"
-            android:textSize="20sp"
+            android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -98,8 +99,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:background="@drawable/recycle_view_item"
-                android:weightSum="1"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:weightSum="1">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -142,11 +143,35 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="50dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.7"
                     android:gravity="center_vertical"
                     android:text="Remind Me"
                     android:textSize="15sp"
                     tools:ignore="HardcodedText" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.3"
+                    android:orientation="vertical"
+                    android:weightSum="2">
+
+                    <TextView
+                        android:id="@+id/date_textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="yy-mm-dd" />
+
+                    <TextView
+                        android:id="@+id/time_textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="00:00:00" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
